# team-spoved

./: .env-template  .env-template.prod  .gitignore  README.md  clean-up-docker.bash  compose.aws.yml  docker-compose.yaml  docker-compose.yml  fast-build.sh  problem_statement.md  sysdesign.drawio  system_description.md
ansible/: README.md  docker-deploy.yml
api/: openapi.yaml
auth/: README.md  build.gradle  openapi.yaml
database/: Dockerfile  README.md  init.sql
docs/: ci-cd.md  monitoring.md  student-responsibility.md  system_description.md
genai/: .env-template  .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
genai/src/: server.py
genai/src/mocks/: voice.py
genai/src/ticket_generator/api/: media_service.py  ticket_servce.py  utils.py  video_photo_service.py  voice_service.py
genai/src/ticket_generator/automation/: ticket_processing_workflow.py  workflow.py
genai/src/ticket_generator/gemini/: model.py  ticket_data_models.py
genai/src/ticket_generator/media/photo/model/: gemini_photo.py
genai/src/ticket_generator/media/video/model/: gemini_video.py
genai/src/ticket_generator/media/voice/model/: gemini_audio.py
genai/tests/: conftest.py
genai/tests/test_ticket_generator/: test_gemini_audio.py  test_gemini_photo.py  test_gemini_video.py  test_utils.py
media/: .env-template  Dockerfile  README.md  build.gradle  openapi.yaml  settings.gradle
nginx/: nginx.conf
prometheus/: prometheus.yaml
resources/: sysdesign.drawio
server/: .dockerignore  Dockerfile  README.md  build.gradle  settings.gradle
terraform/: README.md  main.tf
ticket/: Dockerfile  README.md  openapi.yaml
traefik/: README.md  traefik.yml
user/: Dockerfile  README.md  build.gradle  (+1 more)
(+188 files in other folders)
